[metadata]
license_file = LICENSE.md

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    raise AssertionError
    raise NotImplementedError
    if __name__ == .__main__.:

[isort]
line_length = 88
use_parentheses = True
include_trailing_comma = True
multi_line_output = 3
known_first_party = drf_hcaptcha
known_third_party = ipware,rest_framework
known_django = django
